--- a/machine_learning_artistic_style_transfer.ipynb
+++ b/machine_learning_artistic_style_transfer.ipynb
@@ -44,20 +44,20 @@
         "Google Magenta: Fast Style Transfer for Arbitrary Styles, [Github](https://github.com/tensorflow/magenta/blob/2c3ae9b0dd64b06295e48e2ee5654e3d207035fc/magenta/models/arbitrary_image_stylization/README.md)  \n",
         "Ghiasi, G. et al.; \n",
         "Exploring the structure of a real-time, arbitrary neural artistic stylization network\n",
-        "Golnaz Ghiasi, Aug 2017 [arxiv](https://arxiv.org/abs/1705.06830)\n"
+        "Golnaz Ghiasi, Aug 2017, [arxiv](https://arxiv.org/abs/1705.06830)\n"
       ]
     },
     {
       "metadata": {
         "id": "5tbnXXX2sNYx",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "#@title Die benötigten Modelle und Hilfsfunktionen in die Laufzeitumgebung kopieren.\n",
-        "!curl https://www.hellerbit.com/lmwl/image-stylization-lib.tar.gz -o image-stylization-lib.tar.gz\n",
+        "#@title Die benötigten Modelle und den Stil-Transfer Code in die Laufzeitumgebung kopieren.\n",
+        "!curl https://raw.githubusercontent.com/shellerbrand/machine-learning-for-artistic-style/master/dist/stylization-lib.tar.gz -o image-stylization-lib.tar.gz\n",
         "# The Model can be downloaded as per Google Magenta project\n",
         "!curl https://storage.googleapis.com/download.magenta.tensorflow.org/models/arbitrary_style_transfer.tar.gz -o image-stylization-checkpoint.tar.gz\n",
         "!tar -zxvf image-stylization-lib.tar.gz\n",
@@ -75,10 +75,14 @@
       },
       "cell_type": "code",
       "source": [
-        "#@title Funktionen um Bilder zu laden vom Image-Upload Tool\n",
+        "#@title Hilfs-Funktionen laden (werden für Laden und Anzeigen der Bilder benötigt)\n",
+        "\n",
         "# \n",
         "# Funktionen um Bilder zu laden vom Image-Upload Tool\n",
         "#\n",
+        "\n",
+        "print('Laden von Funktionen zum Laden der Stil und Inhaltsbilder.')\n",
+        "\n",
         "import requests\n",
         "import os\n",
         "import shutil\n",
@@ -126,35 +130,14 @@
         "        if r.status_code == 200:\n",
         "            with open(path, 'wb') as f:\n",
         "                for chunk in r:\n",
-        "                    f.write(chunk)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "r_mn_Qk7LG1w",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "JzqBrxuBr87A",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "#@title Funktionen zur Anzeige von Bildern laden\n",
-        "# Konfiguration der Matplotlib\n",
+        "                    f.write(chunk)\n",
+        "                    \n",
+        "#\n",
+        "# Funktionen zur Anzeige von Bildern laden\n",
+        "#\n",
+        "\n",
+        "print('Laden von Funktionen zum Anzeigen von Bildern.')\n",
+        "# Configuration of matplotlib\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib as mpl\n",
         "mpl.rcParams['figure.figsize'] = (10,10)\n",
@@ -174,7 +157,8 @@
         "  img = Image.open(path_to_img)\n",
         "  long = max(img.size)\n",
         "  scale = max_dim/long\n",
-        "  img = img.resize((round(img.size[0]*scale), round(img.size[1]*scale)), Image.ANTIALIAS)\n",
+        "  img = img.resize((round(img.size[0]*scale), round(img.size[1]*scale)), \n",
+        "                   Image.ANTIALIAS)\n",
         "  \n",
         "  img = kp_image.img_to_array(img)\n",
         "  \n",
@@ -192,7 +176,10 @@
         "  if title is not None:\n",
         "    plt.title(title)\n",
         "  plt.axis('off')\n",
-        "  plt.imshow(out)"
+        "  plt.imshow(out)\n",
+        "  \n",
+        "\n",
+        "print('Erledigt.')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -204,6 +191,9 @@
       },
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        "\n",
+        "\n",
         "## Bilder Laden\n",
         "\n",
         "Hier werden die Bilder für unser neurales Stil-Umwandlungsnetzwerk geladen. Ihr könnt anpassen, welche Bilder als Vorlage für den Stil dienen sollen. Diese __Stilbilder__  könnt Ihr z.B. mit dem Handy auf folgendem Link hochladen:\n",
@@ -237,7 +227,7 @@
       "cell_type": "code",
       "source": [
         "#@title Den Schlüssel zum Download der Bilder hier eingeben\n",
-        "API_KEY = \"2fca1f52bef7c17e350fa55429622c4da1db88af6a8047d8bb787ee6\" #@param {type:\"string\"}\n",
+        "API_KEY = \"3c7f5f9a4d227972f0989cb7c1be7ad0835990d03f84ed8efbae839a\" #@param {type:\"string\"}\n",
         "clear_experiment(EXP_CONTENT)\n",
         "clear_experiment(EXP_STYLE)\n",
         "clear_output()\n",
@@ -288,7 +278,9 @@
         "print(c)\n",
         "\n",
         "with tf.device('/gpu:0'):\n",
-        "  arbitrary_stylization_with_weights(c)"
+        "  arbitrary_stylization_with_weights(c)\n",
+        "\n",
+        "print(\"\\nErledigt.\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -339,7 +331,7 @@
       "metadata": {
         "id": "B327ydjkr87G",
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "colab": {}
       },
       "cell_type": "code",
