--- a/machine_learning_artistic_style_transfer.ipynb
+++ b/machine_learning_artistic_style_transfer.ipynb
@@ -8,7 +8,6 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,7 +330,7 @@
       "metadata": {
         "id": "B327ydjkr87G",
         "colab_type": "code",
-        "cellView": "both",
+        "cellView": "form",
         "colab": {}
       },
       "cell_type": "code",
