Refine notebook with descriptions and images

--- a/machine_learning_artistic_style_transfer.ipynb
+++ b/machine_learning_artistic_style_transfer.ipynb
@@ -34,16 +34,33 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Transfer von Bildstilen mit Neuronalen Netzen\n",
+        "# Neue Werke alter Meister - Transfer von Bildstilen mit Neuronalen Netzen\n",
         "\n",
-        "In diesem Notebook nutzen wir isolierte Teile aus dem Repository des Projekts Google Magenta.\n",
+        "Das Erkennen von Objekten ist eine Aufgabe, die der Mensch ausgezeichnet beherrscht. Auch Computer sind inzwischen mit Hilfe von künstlichen neuronalen Netzen in der Lage, diese Aufgabe in spezifischen Fällen sehr zuverlässig zu erledigen.\n",
         "\n",
-        "__Referenzen:__ \n",
+        "Besonders leistungsfähig is hierbei die Klasse der [Convolutional Neural Networks](https://de.wikipedia.org/wiki/Convolutional_Neural_Network) (ConvNets). Diese Netze bestehen aus einer Folge von Schichten. Die Ausgänge der ersten Schichten entsprechen dabei der Bildzusammensetzung auf Pixel-Ebene, wohingegen die Ausgänge späterer Schichten immer großflächigere Zusammenhänge beschreiben.\n",
         "\n",
-        "Google Magenta: Fast Style Transfer for Arbitrary Styles, [Github](https://github.com/tensorflow/magenta/blob/2c3ae9b0dd64b06295e48e2ee5654e3d207035fc/magenta/models/arbitrary_image_stylization/README.md)  \n",
-        "Ghiasi, G. et al.; \n",
-        "Exploring the structure of a real-time, arbitrary neural artistic stylization network\n",
-        "Golnaz Ghiasi, Aug 2017, [arxiv](https://arxiv.org/abs/1705.06830)\n"
+        "Ein Forschungsteam aus Tübingen [hat gezeigt](https://arxiv.org/abs/1508.06576) , dass sich der Stil eines Gemäldes gut über die Aktivierung der früheren Schichten eines ConvNets beschreiben lässt. Sie haben außerdem gezeigt, wie man ein Bild erzeugen kann, das dem Inhalt eines bestimmten Bildes (__Inhaltsbild__) und dem Stil eines anderen Bildes (__Stilbild__) entspricht.\n",
+        "\n",
+        "<img src=\"https://github.com/shellerbrand/machine-learning-for-artistic-style/raw/master/resources/vgg-convnet-inhalt-und-stil.jpg\" alt=\"Convolutional Neural Network\" width=\"700\"/>\n",
+        "\n",
+        "__Mit diesem Notebook kann man mit diesem neuralen Stil-Transfer experimentieren.__\n",
+        "\n",
+        "Das Beispiel wurde im Rahmen des Blockseminars [Lernen, wie Maschinen lernen](https://www.mzl.uni-muenchen.de/lehramtpro/programm/Lernen_-wie-Maschinen-lernen/index.html) erstellt. Wir benutzen dabei unter anderem modifizierten Code aus dem Repository des Projekts [Google Magenta](https://github.com/tensorflow/magenta), der dem Verfahren von [Ghiasi et al.](https://arxiv.org/abs/1705.06830) entspricht.\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "52Um4cugyInh",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "\n",
+        "## Vorarbeiten\n",
+        "\n",
+        "Diese Schritte müssen nur einmal ausgeführt werden."
       ]
     },
     {
@@ -55,7 +72,7 @@
       },
       "cell_type": "code",
       "source": [
-        "#@title Die benötigten Modelle und den Stil-Transfer Code in die Laufzeitumgebung kopieren.\n",
+        "#@title Die benötigten Modelle und den Stil-Transfer Code in die Umgebung kopieren.\n",
         "!curl https://raw.githubusercontent.com/shellerbrand/machine-learning-for-artistic-style/master/dist/stylization-lib.tar.gz -o image-stylization-lib.tar.gz\n",
         "# The Model can be downloaded as per Google Magenta project\n",
         "!curl https://storage.googleapis.com/download.magenta.tensorflow.org/models/arbitrary_style_transfer.tar.gz -o image-stylization-checkpoint.tar.gz\n",
@@ -193,9 +210,9 @@
         "---\n",
         "\n",
         "\n",
-        "## Bilder Laden\n",
+        "## Bilder Hochladen\n",
         "\n",
-        "Hier werden die Bilder für unser neurales Stil-Umwandlungsnetzwerk geladen. Ihr könnt anpassen, welche Bilder als Vorlage für den Stil dienen sollen. Diese __Stilbilder__  könnt Ihr z.B. mit dem Handy auf folgendem Link hochladen:\n",
+        "Im Folgenden werden die Bilder importiert, die für den Stil-Transfer verwendet werden sollen. Ihr könnt anpassen, welche Bilder als Vorlage für den Stil dienen sollen. Diese __Stilbilder__  könnt Ihr z.B. mit dem Handy auf folgendem Link hochladen:\n",
         "\n",
         "https://imageupload.hellerbit.com/images/2_stil/\n",
         "\n",
@@ -213,7 +230,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Nun bitte den Schlüssel eingeben, mit dem die Bilder geladen werden:"
+        "<img src=\"https://github.com/shellerbrand/machine-learning-for-artistic-style/raw/master/resources/iphone_upload_tool_list.png\" width=\"300\" style=\"float:right;\">\n",
+        "\n",
+        "Nun bitte den Schlüssel eingeben, mit dem die Bilder geladen werden. Wenn  Bilder hochgeladen wurden, dann sollte man diese Zelle laufen lassen."
       ]
     },
     {
@@ -245,11 +264,15 @@
       "source": [
         "## Bildstile Übertragen\n",
         "\n",
-        "Jetzt können die Bildstile übertragen werden. Dabei  nutzen wir die Netzwerke, die im Google Projekt Magenta bereits vortrainiert wurden. \n",
+        "Jetzt können die Bildstile übertragen werden. \n",
         "\n",
-        "Für jedes __Stilbild__ wird zunächst ein Vektor ermittelt, der den Stil des Bildes beschreibt. Im Anschluss wird dieser Vektor an das Stiltransfer-Netz übergeben, das diesen Stil dem __Inhaltsbild__ aufprägt.\n",
+        "Für jedes __Stilbild__ wird zunächst ein Vektor S ermittelt, der den Stil des Bildes beschreibt. Im Anschluss wird dieser Vektor an das Stiltransfer-Netz übergeben, das diesen Stil dem __Inhaltsbild__ aufprägt.\n",
         "\n",
-        "Dieses Verfahren wird für alle Kombinationen aus Stil- and Inhaltsbild, die im vorherigen Schritt hochgeladen wurden, wiederholt."
+        "<img src=\"https://github.com/shellerbrand/machine-learning-for-artistic-style/raw/master/resources/netze-fuer-analyse-und-transfer.jpg\" alt=\"Convolutional Neural Network\" width=\"700\"/>\n",
+        "\n",
+        "Die Netze, die in unserem Beispiel benutzt werden, wurden von Google im Projekt Magenta bereits vortrainiert. Man kann sich das so vorstellen, dass das Netz für die Stil-Analyse bereits zehntausende Bilder angesehen hat. Deshalb kann es den Stil auch für Bilder beschreiben, die es zuvor noch nicht gesehen hat. In ähnlicher Weise wurde das Stil-Transfer Netzwerk mit sehr vielen Bildern dafür trainiert, einen Stil auf ein Inhaltsbild zu übertragen.\n",
+        "\n",
+        "Die beiden vortrainierten Netze werden nun für alle Kombinationen der __Stil-__ und __Inhaltsbilder__, die im vorherigen Schritt hochgeladen wurden, angewendet.\n"
       ]
     },
     {
@@ -291,7 +314,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Bilder Ansehen\n",
+        "## Bilder ansehen\n",
         "\n",
         "Nachdem der Stiltransfer ohne Fehler durchgelaufen ist, könnt ihr Euch hier die Bilder ansehen."
       ]
@@ -342,11 +365,9 @@
         "cols = len(sfiles)+1\n",
         "#print(\"{},{}\".format(basewidth,len(files)/cols*basewidth))\n",
         "plt.figure(num=1, figsize=(basewidth,len(sfiles)/(cols*cols)*basewidth))\n",
-        "plt.subplot(np.ceil(len(sfiles)/cols),cols,1)\n",
-        "plt.plot(np.arange(10), np.arange(10), label='linear')\n",
         "plt.axis('off')\n",
         "\n",
-        "pind = 2\n",
+        "pind = 1\n",
         "sfiles.sort()\n",
         "for fi in sfiles:\n",
         "    path = os.path.join(DIR, EXP_STYLE, fi)\n",
@@ -372,9 +393,12 @@
       "source": [
         "#@title Bilder mit übertragenem Stil ansehen\n",
         "# Stylized Images\n",
+        "from re import match\n",
+        "\n",
         "cols = 3\n",
         "basewidth=20\n",
         "files = os.listdir(path=os.path.join(OUTDIR))\n",
+        "files = [x for x in files if match('^zzResult.*',x)]\n",
         "#print(\"{},{}\".format(basewidth,len(files)/cols*basewidth))\n",
         "plt.figure(num=1, figsize=(basewidth,len(cfiles)/(len(sfiles)+1)*basewidth))\n",
         "pind = 1\n",
@@ -409,6 +433,27 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "vB8asjdgwOxK",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "\n",
+        "## Referenzen\n",
+        "\n",
+        "* Gatys, L. et al; A Neural Algorithm of Artistic Style, Sep 2015, [arxiv](https://arxiv.org/abs/1508.06576)\n",
+        "* Google Magenta: Fast Style Transfer for Arbitrary Styles, [Github](https://github.com/tensorflow/magenta/blob/2c3ae9b0dd64b06295e48e2ee5654e3d207035fc/magenta/models/arbitrary_image_stylization/README.md)  \n",
+        "* Ghiasi, G. et al.; \n",
+        "Exploring the structure of a real-time, arbitrary neural artistic stylization network\n",
+        "Golnaz Ghiasi, Aug 2017, [arxiv](https://arxiv.org/abs/1705.06830)\n",
+        "\n",
+        "Der Source-Code für dieses Notebook und das Tool zum Bilder hochladen sind bzw. werden hier veröffentlicht:\n",
+        "https://github.com/shellerbrand/machine-learning-for-artistic-style\n"
+      ]
     }
   ]
 }
